tests/paczka1/small_fuzzy/22129776.err
Error in line 2: yJ3qKQ A674 94,1
Error in line 3: yJ3qKQ A542 49,7
Error in line 9: 542 618 64,3
